--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - /dev/shm:/dev/shm
     depends_on:
       - selenium
+    ports:
+      - "5901:5901"
     environment:
       # HUB_HOST: selenium
       HUB_PORT_4444_TCP_ADDR: selenium
@@ -47,6 +49,8 @@ services:
     image: selenium/node-chrome-debug:3.12.0-boron
     volumes:
       - /dev/shm:/dev/shm
+    ports:
+      - "5900:5900"
     depends_on:
       - selenium
     environment:
