--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "8000:8000"
   worker:
     image: huseyinyilmaz/watson-dev-backend-base
-    command: sh -c "cd /watson/watson/ && celery worker -A watson -c 4 -l info -B"
+    command: sh -c "cd /watson/watson/ && celery worker -A watson -c 4 -l debug -B"
     volumes:
         - .:/watson
     depends_on:
@@ -38,8 +38,8 @@ services:
       - /dev/shm:/dev/shm
     depends_on:
       - selenium
-    # ports:
-    #   - "5901:5901"
+    ports:
+      - "5901:5900"
     environment:
       # HUB_HOST: selenium
       HUB_PORT_4444_TCP_ADDR: selenium
@@ -49,8 +49,8 @@ services:
     image: selenium/node-chrome-debug:3.12.0-boron
     volumes:
       - /dev/shm:/dev/shm
-    # ports:
-    #   - "5900:5900"
+    ports:
+      - "5900:5900"
     depends_on:
       - selenium
     environment:
