--- a/deployment/dev_backend_base/Dockerfile
+++ b/deployment/dev_backend_base/Dockerfile
@@ -4,6 +4,8 @@
 FROM python:3.7.0b5-alpine3.7
 
 WORKDIR /usr/src/app
+
+# graphviz is needed for graph_models call.
 RUN apk update && \
     apk add --update \
         alpine-sdk \
@@ -14,8 +16,12 @@ RUN apk update && \
         lcms2-dev \
         libwebp-dev \
         openjpeg-dev \
-        pngquant && \
+        pngquant \
+        graphviz && \
     rm -rf /var/cache/apk/* ;
+
 # Copy requirements folder.
 COPY ./requirements.txt ./requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
